# fw-gecko-cage

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
platform/toolchains/: STM32F401.cmake
stm32f4/inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
stm32f4/src/usb_cdc_device/: usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
